--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
     <packaging>pom</packaging>
     <name>proj01-wm</name>
     <description>proj01-wm</description>
+
+    <modules>
+        <module>P01-common</module>
+        <module>P01-pojo</module>
+        <module>P01-server</module>
+    </modules>
+
     <url/>
     <licenses>
         <license/>
@@ -75,6 +82,36 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.8.13</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>9.4.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>3.5.14</version>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-core</artifactId>
+            <version>3.5.14</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-engine-core</artifactId>
+            <version>2.4.1</version>
+        </dependency>
+
+
+<!--        <dependency>-->
+<!--            <groupId>com.baomidou</groupId>-->
+<!--            <artifactId>mybatis-plus-boot-starter</artifactId>-->
+<!--            <version>3.5.14</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
