--- a/P01-server/pom.xml
+++ b/P01-server/pom.xml
@@ -64,6 +64,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fallensakura</groupId>
+            <artifactId>P01-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
