--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,17 @@
             <version>2.20.26</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.14</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
 
 <!--        <dependency>-->
 <!--            <groupId>com.baomidou</groupId>-->
